package ConstructionalDesignPatterns.Builder;

public interface Builder<T> {
    T build();
}
