package ConstructionalDesignPatterns.Factory;

public interface AbstractFactory {
    public IProduct produce();
}
