package ConstructionalDesignPatterns.Factory;

public interface IProduct {
    void dosomething();
}
