package ConstructionalDesignPatterns.Factory;

public class ProductA implements IProduct{

    @Override
    public void dosomething(){
    System.out.println("Product A");
}

}
