package ConstructionalDesignPatterns.Factory;

public class ProductB implements  IProduct{
    @Override
    public void dosomething() {

    }
}
