package ConstructionalDesignPatterns.Singleton;

public class SingletonClient {
    Singleton instance = Singleton.getInstance();
}
