package StructuralDesignPatterns.Facade;

public class AdditionalFacade {
}
