package StructuralDesignPatterns.Facade;

public class Facade {
    private SubsystemInterfaceOne systemOne;
    private SubsystemInterfaceTwo systemTwo;
    private SubsystemInterfaceThree systemThree;
    private SubsystemInterfaceFour systemFour;
    private AdditionalFacade additionalFacade;

    public Facade(){

    }
}
