package StructuralDesignPatterns.Facade;

public class SubsystemInterfaceFour {
}
