package StructuralDesignPatterns.Facade;

public class SubsystemInterfaceOne {
}
