package StructuralDesignPatterns.Facade;

public class SubsystemInterfaceThree {
}
