package StructuralDesignPatterns.Facade;

public class SubsystemInterfaceTwo {
}
